--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,45 +1,11 @@
 <resources>
     <string name="app_name">Unit Converter</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="lorem_ipsum">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
-        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
-        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
-        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
-        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
-        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
-        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
-        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
-        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
-        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
-        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
-        bibendum, vel congue leo egestas.\n\n
-        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
-        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
-        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
-        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
-        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
-        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
-        est.\n\n
-        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
-        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
-        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
-        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
-        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
-        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
-        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
-        convallis.\n\n
-        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
-        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
-        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
-        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
-        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
-        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
-        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
+    <string name="privacy_policy_text">Unit Converter Lite is a free mobile application developed by Lite Mobile Tools. This Privacy Policy explains how information is handled when you use our app.\n\nBy using the Unit Converter Lite app, you agree to the terms of this Privacy Policy.\n\n**Information Collection and Use**\n\nUnit Converter Lite is designed to work offline and does not require any registration. You can simply install the app and start using it for unit calculations.\n\n🔒 We do not collect, store, or share any personal information.\n\nSpecifically:\n\n
+* We do not collect names, email addresses, phone numbers, or any personal identifiers.\n
+* We do not require users to create an account.\n
+* We do not collect usage data, location data, or device information.\n
+* We do not use cookies or tracking technologies.\n\n**Personal Information**\n\nWe do not collect personal identification information from users at any time. You can use the app completely anonymously.\n\n**Non-Personal Information**\n\nUnit Converter Lite does not collect non-personal information such as device details, operating system, browser type, or internet service provider information.\n\n**How the App Works**\n\nAll calculations are performed locally on your device. No data is transmitted to our servers or any third-party services.\n\n**Sharing of Information**\n\nSince we do not collect any user data, there is no information to sell, trade, rent, or share with third parties.\n\n**Third-Party Services**\n\nUnit Converter Lite does not use third-party analytics tools, advertising services, or external SDKs that collect user data.\n\n**Children’s Information**\n\nUnit Converter Lite does not knowingly collect any information from children under the age of 13. As no data is collected at all, the app is safe for users of all ages.\n\n**Changes to This Privacy Policy**\n\nLite Mobile Tools may update this Privacy Policy from time to time. Any changes will be reflected on this page with an updated revision date. We encourage users to review this policy periodically.\n\n**Your Acceptance of This Policy**\n\nBy installing and using Unit Converter Lite, you signify your acceptance of this Privacy Policy. If you do not agree with this policy, please do not use the app.\n\nThis document was last updated on Feb 10, 2026
     </string>
+    <string name="privacy_policy_url">https://litemobiletools.blogspot.com/p/privacy-policy-for-unit-converter-lite.html</string>
 </resources>
